--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <link type="text/css" rel="stylesheet" href="dist/main.css "/>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
   <script src="https://use.fontawesome.com/3d160053b9.js" rel="stylesheet"></script>
 <title> New York Times </title>
 </head>
