cleaning scss files
cleaning scss files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://use.fontawesome.com/3d160053b9.js" rel="stylesheet"></script>
 <title> New York Times </title>
 </head>
-<body class="color-white">
+<body class="color-white fontOpenSans">
 
 <div class="logoAndDropdown flexChooseTablet">
 
